--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ body {
   background-color: rgb(255, 208, 0);
   text-align: center;
   font-weight: 900;
+  border: solid 3px green;
+}
+
+nav a {
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  background-color: greenyellow;
+  display: inline-block;
+  width: 80px;
 }
 
 main {
@@ -30,7 +41,6 @@ main {
 }
 
 /* Conteúdo das lições aprendidas e a aprender */
-
 #container_licoes {
   margin-top: 120px;
 }
@@ -50,7 +60,7 @@ main {
 #container_ol h2 {
   margin-left: 40px;
   font-size: 25px;
-} 
+}
 
 #licoes_aprendidas {
   margin-left: 40px;
@@ -63,19 +73,17 @@ main {
 #container_ul h2 {
   margin-left: 40px;
   font-size: 25px;
-} 
+}
 
 #licoes_a_aprender {
   margin-left: 40px;
   font-size: 20px;
   font-style: italic;
   text-decoration: underline;
-  line-height: 20px;
   line-height: 30px;
 }
 
 /* Conteúdo dos artigos */
-
 #container_conteudos {
   background-color: coral;
   margin-top: 120px;
@@ -115,11 +123,11 @@ main {
 }
 
 /* Tabela */
-
 #tabela {
   margin-top: 120px;
   background-color: rgb(224, 186, 224);
-  padding: 10px 0px 25px 0px;
+  padding-top: 10px;
+  padding-bottom: 25px;
 }
 
 #tabela h2 {
@@ -130,13 +138,13 @@ table {
   margin: auto;
 }
 
-table, th, td {
+table , th , td {
   border: 1px solid black;
   border-collapse: collapse;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-th, td {
+th , td {
   padding: 5px 10px;
 }
 
@@ -147,7 +155,6 @@ th {
 }
 
 /* Rodapé */
-
 #rodape {
   text-align: center;
   background-color: rgb(78, 74, 78);
@@ -155,6 +162,6 @@ th {
   margin-top: 60px;
 }
 
-#rodape h4 {
+#rodape h3 {
   padding-top: 4px;
 }
