--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     background-color: rgb(253, 251, 251);
 }
-
 #cabecalho {
     width: 100%;
     height: 80px;
@@ -9,7 +8,6 @@ body {
     position: fixed;
     background-color: lightblue;
 }
-
 #titulo {
     position: absolute;
     font-size: 20px;
@@ -17,18 +15,37 @@ body {
     top: 15px;
     left: 15px;
 }
-
+.class {
+    float: left;
+}
 #minha_foto {
     width: 250px;
     margin-top: 50px;
 }
-
 #secao1 {
     float: left;
     width: 20%;
 }
-
-#aside1 {
+#div1 {
     float:right;
     width: 80%;
+}
+#link {
+    margin-top: 280px;
+}
+#artigo {
+    margin-top: 3px;
+    float: left;
+    width: 15%;
+}
+#aside1 {
+    float: right;
+    width: 80%;
+}
+#rodape {
+    left: 200px;
+    padding: 1px;
+    border: 2px solid black;
+    bottom: 0%;
+    position: fixed;
 }
