--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@ body {
 }
 
 h2 {
-  color: #868e96;;
+  color: #343a40;;
   font-size: 30px;
-  
+
 }
 #cabecalho {
-  background-color: #6c757d;
+  background-color: #eee;
   padding: 5px;
   text-align: center;
   top: 0;
@@ -19,15 +19,13 @@ h2 {
 }
 
 #titulo {
-  color: #fff;
+  color: #343a40;
   font-size: 60px;
 }
 
 #minha_foto {
-  height: 22%;
-  width: 22%;
-  border-radius: 50%;
-  margin-top: 170px;
+  border-radius: 10%;
+  width: 100%;
 }
 
 #social-icons {
@@ -51,9 +49,27 @@ h2 {
 
 #rodape {
   background-color: #eee;
-  color: #868e96;
+  color: #343a40;
   font-size: 20px;
   line-height: 60px;
   text-align: center;
   margin-top: 30px;
+}
+
+.lado-esquerdo, .lado-direito {
+  border: 1px solid red;
+  display:inline-block;
+  margin: 0 10px;
+  padding: 0 5px;
+}
+
+figure {
+  border: 1px solid red;
+  display: inline-block;
+  width: 300px;
+  margin-bottom: 0;
+} 
+
+main {
+  margin-top: 200px;
 }
