--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
   font-family: sans-serif;
 }
 
-h1, h2 {
-  font-family: Epilogue,Verdana,sans-serif;
+h1 , h2 {
+  font-family: Epilogue, Verdana, sans-serif;
 }
 
 #cabecalho {
@@ -30,7 +30,7 @@ h1, h2 {
 }
 
 .link {
-  color: rgb(255, 255, 255);
+  color: rgb(257, 255, 255);
   text-decoration: none;
   letter-spacing: 0.5px;
 }
@@ -66,7 +66,7 @@ h1, h2 {
   display: flex;
 }
 
-#artigo {
+.lado-esquerdo {
   width: 60%;
   margin: 0 5%;
   text-align: justify;
@@ -74,7 +74,7 @@ h1, h2 {
   font-size: large;
 }
 
-#tabela {
+.lado-direito {
   border: solid 2px;
   width: 60%;
   margin: 5% 5% 0% 1%;
@@ -103,7 +103,7 @@ h1, h2 {
   text-align: center;
 }
 
-#fraseFinal{
+#fraseFinal {
   background-color: rgb(68, 73, 85);
   margin-top: 5%;
   padding: 2.2% 0;
@@ -118,7 +118,7 @@ h1, h2 {
 
 #assinatura {
   background-color: rgb(60, 64, 74);
-  color: hsla(0,0%,100%,.5);
+  color: rgb(157, 162, 173);
   font-size: 12px;
   padding: 3.3% 0;
 }
