--- a/style.css
+++ b/style.css
@@ -1,33 +1,44 @@
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
 }
+
 #cabecalho {
-    position: fixed;
-    top: 0;
+  position: fixed;
+  top: 0;
 }
+
 #titulo {
-   font: bolder;
+  font-weight: 600;
 }
-.aprendi {
-    float: left;
+
+.lado-esquerdo {
+  float: left;
+  width: 500px;
 }
-.vouaprender {
-    float: right;
+
+.lado-direito {
+  float: right;
+  width: 500px;
+  margin: 5px;
+  padding: 10px;
 }
+
 #licoes_aprendidas {
-    clear: both;
+  clear: both;
 }
+
 #minha_foto {
-    width: 150px;
-    margin-top: 5em;
+  width: 150px;
+  margin-top: 5em;
 }
-#artigo {
-    width: 40%;
-}
+
+
+
 .tabela {
-    border: 5px solid black;
+  border: 5px solid black;
 }
+
 #rodape {
-    background-color: blue;
-    color: black;
+  background-color: blue;
+  color: black;
 }
