--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background-color: rgb(253, 251, 251);
+  line-height: 20px;
+  font-size: 16px;
 }
 
 #cabecalho {
@@ -34,6 +36,7 @@ body {
 
 .tabela {
   border: 5px solid black;
+  font-family: monospace;
 }
 
 #rodape {
