Refatoracao e melhoria do codigo

--- a/style.css
+++ b/style.css
@@ -45,10 +45,22 @@ th {
   text-align: justify;
 }
 
-article,
-aside,
 footer {
   font-size: 5px;
   width: 50%;
+}
+
+.lado-direito {
+  font-size: 5px;
+  display: inline-block;
+}
+
+.lado-esquerdo {
+  font-size: 5px;
+  display: inline-block;
+}
+
+.artigos {
+  display: inline-block;
   align-items: justify;
 }
