--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   background-color: rgb(253, 251, 251);
-  font-family: "Courier New", Courier, monospace;
+  font-family: Franklin Gothic Medium, Arial Narrow, Arial, sans-serif;
   font-size: 17px;
   color: rgb(46, 16, 16);
-  margin: 0mm;
+  margin: 0;
 }
 
 h2 {
@@ -22,22 +22,23 @@ img {
 }
 
 #cabecalho {
-  top: 0px;
-  padding: 0px 0px 20px 0px;
+  top: 0;
+  padding: 0 0 20px;
   background-color: rgb(160, 115, 115);
   width: 100%;
   height: 100px;
   position: fixed;
   z-index: 1;
 }
+
 header h1 {
-  margin-block-start: 0px;
-  margin-block-end: 0px;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 section div {
   display: inline-block;
-  margin: 30px 30px 30px 30px;
+  margin: 30px;
   padding-left: 5px;
   background-color: rgb(212, 186, 186);
   width: 220px;
@@ -50,11 +51,10 @@ section {
   padding: 1px;
   width: 75%;
   background-color: rosybrown;
-  border-radius: 0px 0px 50px 0px;
+  border-radius: 0 0 50px;
 }
 
-ul,
-ol {
+ul , ol {
   text-align: left;
 }
 
@@ -63,7 +63,7 @@ nav {
   height: 42px;
   background-color: rosybrown;
   border-radius: 10px;
-  margin: 0px 0px 0px 20px;
+  margin: 0 0 0 20px;
 }
 
 nav a:hover {
@@ -76,11 +76,11 @@ nav:hover {
 }
 
 footer {
-  margin: 30px 0px 0px 0px;
+  margin: 30px 0 0;
   width: 100%;
   height: 60px;
   background-color: rgb(160, 115, 115);
-  border-radius: 0px 20px 0px 0px;
+  border-radius: 0 20px 0 0;
 }
 
 article {
@@ -93,7 +93,7 @@ article {
   width: 800px;
   font-size: 90%;
   background-color: rgb(134, 75, 75);
-  border-radius: 0px 20px 20px 0px;
+  border-radius: 0 20px 20px 0;
 }
 
 article h2 {
@@ -112,8 +112,7 @@ aside {
   padding-top: 290px;
   position: absolute;
   right: 16px;
-  top: 0px;
-  font-size: 90%;
+  top: 0;
   background-color: rgb(134, 75, 75);
   z-index: 0;
   border-radius: 10px;
