--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 * {
     margin: 0;
+    letter-spacing: 1px;
 }
 
 body {
     background-color: rgb(253, 251, 251);
     font-family: sans-serif;
     font-size: 16px;
-    letter-spacing: .2rem;
+    
 }
 
 #cabecalho {
@@ -43,16 +44,17 @@ body {
 }
 
 #licoes {
-    display: inline-block;
 
+}
+.tabela {
+    display: inline-block;
 }
 
 #licoes_aprendidas {
     background-color: rgb(243, 226, 169);
     border: 5px;
     font-size: 14px;
-    margin: 0px;
-    float: left;
+    margin: 0px;  
 }
 
 #licoes_a_aprender {
@@ -60,8 +62,9 @@ body {
     border: 5px;
     font-size: 14px;
     margin: 0px;
-    float: right;
+
 }
+
 #links_externos {
     display: flex;
 }
