--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 * {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  line-height: 23px;
   margin: 0;
   padding: 0;
-  font-size: 16px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  line-height: 23px;
   text-decoration: none;
 }
 
@@ -12,26 +12,27 @@ body {
 }
 
 h2 {
-  margin: 0 0 10px;
   font-size: 1.1em;
+  margin: 0 0 10px;
 }
 
 #cabecalho {
-  width: 100%;
-  height: 16%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  text-align: center;
   background-color: rgb(162, 216, 185);
+  height: 16%;
+  left: 0;
+  position: fixed;
+  text-align: center;
+  top: 0;
+  width: 100%;
 }
 
 #cabecalho nav a {
+  color: rgba(255, 255, 255, 0.8);
   float: left;
-  text-decoration: none;
   font-weight: 700;
   margin: 5px;
-  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+  list-style: none;
 }
 
 #cabecalho h1 {
@@ -39,70 +40,70 @@ h2 {
 }
 
 #navegacao {
-  border-top: 1px dotted rgba(255, 255, 255, 0.8);
   background-color: rgb(162, 216, 185);
-  width: 100%;
+  border-top: 1px dotted rgba(255, 255, 255, 0.8);
   height: 40px;
   padding: 0 35px;
+  width: 100%;
 }
 
 #titulo {
+  color: rgba(255, 255, 255, 0.8);
   font-family: Ubuntu, Cantarell, sans-serif;
   font-size: 2.2em;
   margin: 0 auto;
   padding: 15px;
-  color: rgba(255, 255, 255, 0.8);
 }
 
 #minha_foto {
-  top: 25%;
-  position: absolute;
   left: 3%;
+  position: absolute;
+  top: 25%;
   width: 80px;
 }
 
 #container-principal {
-  width: 90%;
   height: 720px;
   margin: 110px auto 10px;
+  width: 90%;
 }
 
 .container-lado-esquerdo {
+  float: left;
+  height: 270px;
   margin: 20px 10px;
   padding: 20px;
   width: 66%;
-  height: 270px;
-  float: left;
 }
 
 .container-tabela {
+  float: left;
+  height: 250px;
   margin: 20px 0;
   padding: 20px;
   width: 23%;
-  height: 250px;
-  float: left;
 }
 
 .lado-esquerdo {
+  float: left;
+  height: 250px;
   margin: 0 7px;
   padding: 10px;
   width: 45%;
-  height: 250px;
-  float: left;
 }
 
 .lado-direito {
+  float: left;
+  height: 250px;
   margin: 0 7px;
   padding: 10px;
   width: 45%;
-  height: 250px;
-  float: left;
 }
 
 table , thead , tr {
   border: 1px solid;
-  width: 100%;
   text-align: justify;
+  width: 100%;
 }
 
 td {
@@ -114,25 +115,26 @@ td {
   text-align: center;
 }
 
-#licoes_aprendidas , #licoes_a_aprender {
-  margin: 0 10px;
-  padding: 35px;
-  width: 28%;
-  height: 240px;
-  float: left;
-}
-
 #licoes_a_aprender {
   list-style: decimal;
 }
 
+#licoes_aprendidas , #licoes_a_aprender {
+  float: left;
+  height: 240px;
+  list-style-position: inside;
+  margin: 0 10px;
+  padding: 35px;
+  width: 28%;
+}
+
 #rodape {
   background-color: rgb(162, 216, 185);
+  clear: both;
   font-family: Ubuntu, Cantarell, sans-serif;
   font-weight: 600;
+  margin-top: 10px;
   padding: 10px;
   text-align: center;
   width: 100%;
-  margin-top: 10px;
-  clear: both;
 }
