--- a/style.css
+++ b/style.css
@@ -1,25 +1,22 @@
 header {
-  font-family: monospace;
+  font-family: Segoe UI, Tahoma, Verdana, sans-serif;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   scrollbar-width: 0;
-  border: solid 2px black;
-  background-color: rgb(0, 255, 128);
-
-}
-
-#titulo {
-  text-align: center;
+  color: white;
+  border-bottom: solid 10px rgb(3, 107, 82);
+  background-color: rgb(47, 193, 140);
 
 }
 
 h2 {
-  background-color: rgb(0, 255, 128);
+  background-color: rgb(47, 193, 140);
   font-size: 30px;
   margin-top: 40px;
-  border: solid 2px black;
+  border-bottom: solid 5px rgb(3, 107, 82);
+  color: white;
 
 }
 
@@ -27,7 +24,7 @@ h2 {
   background-color: black;
   padding: 10px;
   border-radius: 100%;
-  margin-top: 100px;
+  margin-top: 130px;
   margin-bottom: 50px;
   height: 300px;
   width: 300px;
@@ -36,7 +33,7 @@ h2 {
 
 .github {
   padding: 20px;
-  background-color: black;
+  background-color: rgb(47, 193, 140);
   border-radius: 20px;
   color: white;
 
@@ -60,21 +57,30 @@ body {
 .principal {
   margin-top: 40px;
   width: 30%;
-  border: solid 2px black;
+  border: solid 5px rgb(3, 107, 82);
   font-family: -apple-system, sans-serif;
+  background-color: rgb(47, 193, 140);
+  color: white;
 
 }
 
 .secundario {
-  border: solid 2px black;
+  border: solid 5px rgb(47, 193, 140);
   width: 30%;
   margin-top: 50px;
+  background-color: rgb(3, 107, 82);
+  color: white;
 
 }
 
 footer {
-  margin-top: 90px;
-  font-size: 20px;
+  font-family: monospace;
+  margin-top: 40px;
+  scrollbar-width: 0;
+  color: white;
+  border-bottom: solid 10px rgb(3, 107, 82);
+  background-color: rgb(47, 193, 140);
+
 
 }
 
@@ -86,5 +92,15 @@ ul , ol {
 
 table {
   width: 30%;
+  background-color: rgb(47, 193, 140);
+  border: rgb(3, 107, 82);
+  color: white;
 
 }
+
+a {
+  color: white;
+  font-family: cursive;
+  font-size: 20px;
+}
+
