--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 * {
     margin: 0;
-    letter-spacing: 1px;
 }
 
 body {
     background-color: rgb(253, 251, 251);
     font-family: sans-serif;
     font-size: 16px;
-    
+    line-height: 30px;
 }
 
 #cabecalho {
@@ -69,3 +68,20 @@ body {
     display: flex;
 }
 
+.lado-esquerdo {
+    width: 49%;
+    float: left;
+    border: 1px solid;
+    
+}
+
+.lado-direito {
+    width: 49%;
+    float: right;
+    border: 1px solid red;
+    
+}   
+
+.artigos {
+    clear: both;
+}
