--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   color: rgb(255, 255, 255);
   font-size: 10px;
   width: 768px;
-  text-align: inherit;
+  text-align: justify;
 }
 
 #cabecalho {
@@ -66,4 +66,10 @@ th {
 
 footer {
   font-size: 3px;
+}
+
+a:link,
+a:visited,
+a:active {
+  text-decoration: none;
 }
