--- a/style.css
+++ b/style.css
@@ -9,11 +9,16 @@ body {
     background-color: lightblue;
 }
 #titulo {
-    position: absolute;
+    position: fixed;
     font-size: 20px;
     font-family: monospace;
     top: 15px;
     left: 15px;
+}
+#link {
+    position: relative;
+    left: 500px;
+    top: 30px;
 }
 .class {
     float: left;
@@ -22,30 +27,14 @@ body {
     width: 250px;
     margin-top: 50px;
 }
-#secao1 {
-    float: left;
-    width: 20%;
-}
-#div1 {
-    float:right;
-    width: 80%;
-}
-#link {
-    margin-top: 280px;
-}
 #artigo {
-    margin-top: 3px;
-    float: left;
-    width: 15%;
-}
-#aside1 {
-    float: right;
-    width: 80%;
+    line-height: 15px;
 }
 #rodape {
     left: 200px;
     padding: 1px;
     border: 2px solid black;
     bottom: 0%;
-    position: fixed;
+    font-style: italic;
+    color: brown;    
 }
