--- a/style.css
+++ b/style.css
@@ -24,10 +24,24 @@ body {
   padding-top: 20px;
 }
 
+/*-----------------settings Main---------------*/
+.container-Main {
+  height: 800px;
+  width: 100%;
+  position: relative;
+}
+
+/*settings - first section*/
+.first-section {
+  width: 100%;
+  height: 400px;
+  position: relative;
+}
+
 /*configurations profile */
 .figurePhotoMain {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   position: relative;
   margin-top: 130px;
   padding-left: 50px;
@@ -42,45 +56,86 @@ body {
 }
 
 .figcaption-my-photo {
-  margin-left: 50px;
+  margin-left: 35px;
   width: 150px;
 }
 
 /*configurations - article and aside*/
-
-.lado-direito {
-  width: 300px;
-  height: 300px;
+.article-txt {
+  width: 500px;
   position: relative;
   display: inline-block;
-  margin-left: 150px;
-  text-align: justify;
-  text-indent: 4em;
+  padding-left: 40px;
 }
 
 .lado-esquerdo {
-  width: 40%;
-  height: 300px;
-  position: relative;
-  display: inline-block;
-  margin-left: 80px;
+  width: 100%;
+  height: 100%;
   line-height: 25px;
   text-align: justify;
   text-indent: 4em;
 }
 
+.aside-txt {
+  width: 200px;
+  height: 300px;
+  position: relative;
+  display: inline-block;
+  padding-left: 120px;
+}
+
+.lado-direito {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  text-align: justify;
+  text-indent: 3em;
+  padding-top: 110px;
+  line-height: 1.6em;
+}
+
+/*setting - second section*/
+.second-section {
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+
 /*configurations - section lessons*/
 .lessons {
-  color: white;
-  text-align: center;
-  font-size: 40px;
-  background-color: rgb(96, 124, 124);
+  position: relative;
+  width: 100%;
+  height: 70px;
+  background-color: #008080;
   margin-top: 80px;
 }
 
+.lessons h1 {
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  padding-top: 10px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+a {
+  color: rgb(212, 248, 104);
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(3, 211, 238);
+  font-size: 1.3em;
+}
+
+a:active {
+  color: black;
+}
+
+
 .list {
   position: relative;
-  background-color: blue;
+  background-color: rgb(49, 49, 51);
   height: 300px;
   padding-top: 30px;
   padding-left: 25%;
@@ -110,11 +165,11 @@ ul li {
 
 /*Footer configurations*/
 #rodape {
-  height: 200px;
+  height: 170px;
   position: relative;
-  margin: 0;
   background-color: teal;
   padding-top: 30px;
+  margin-top: 5%;
 }
 
 .div-rodape img {
