--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ ul li {
 
 /*Footer configurations*/
 #rodape {
-  height: 170px;
+  height: 355px;
   position: relative;
   background-color: teal;
   padding-top: 30px;
@@ -179,7 +179,30 @@ ul li {
 
 .div-rodape img {
   float: left;
-  width: 150px;
-  height: 150px;
-  margin-left: 15%;
+  width: 80px;
+  height: 80px;
+  margin-left: 20%;
+  padding-top: 15px;
+}
+
+/*settings - calendar */
+.calendar {
+  width: 100%;
+  height: 180px;
+  clear: both;
+  position: relative;
+  box-shadow: 0px 0px 42px 20px rgb(0 0 0);
+  margin-top: 167px;
+  padding-left: 30%;
+  background-color: #313133;
+}
+
+.th-calendario {
+  width: 123px;
+  height: 20px;
+  margin-top: 25px;
+}
+
+.day-week {
+  width: 60px;
 }
