--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   text-align: center;
 }
 
-.navibar li {
+.lista-menu li {
   display: inline;
   float: left;
   text-align: center;
@@ -40,15 +40,16 @@ body {
   height: 4vh;
 }
 
-.navibar a {
+.lista-menu a {
   display: block;
   padding: 0.8vmax;
   text-decoration: none;
   font-size: 2vh;
   color: teal;
 }
-.navibar a:hover {
-  background-color:rgba(253, 251, 251);
+
+.lista-menu a:hover {
+  background-color: rgba(253, 251, 251);
   color: rgba(250, 155, 46, 0.897);
 }
 
@@ -102,7 +103,8 @@ table , tr , td , th {
 .footer {
   bottom: 0;
   padding-top: 2vh;
-  background-color: rgb(6, 113, 122);
+  color: rgb(253, 251, 251);
+  background-color:  rgb(6, 113, 122);
   text-align: center;
   width: 100%;
   height: 7vh;
@@ -110,4 +112,5 @@ table , tr , td , th {
 
 .footer a {
   text-decoration: none;
+  color: rgb(253, 251, 251);
 }/* stylelint-disable-next-line rule */
