--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 #minha_foto {
   border-radius: 50%;
+  margin-left: 2%;
   margin-top: 100px;
   width: 300px;
 }
@@ -43,11 +44,13 @@ body {
 
 article {
   display: inline-block;
+  margin-left: 1%;
   width: 50%;
 }
 
-aside {
+#passagem {
   display: inline-block;
-  width: 30%;
-  margin-left: 19%;
+  margin-left: 20%;
+  text-align: center;
+  width: 28%;
 }
