--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@ body {
   text-align: center;
   top: 0;
   width: 100%;
+  height: 110px;
+}
+
+#cabecalho nav a {
+  background-color: rgb(131, 164, 216);
+  color: rgb(253, 251, 251);
+  font-weight: 600;
+  font-family: Impact, Haettenschweiler, sans-serif;
+  text-decoration: none;
+  border-radius: 10px;
+  padding: 5px 10px;
 }
 
 #minha_foto {
@@ -21,7 +32,7 @@ body {
   display: block;
   margin-left: 150px;
   margin-right: auto;
-  margin-top: 100px;
+  margin-top: 120px;
   width: 300px;
 }
 
@@ -53,20 +64,22 @@ body {
   display: inline-block;
   margin-left: 100px;
   width: 50%;
+  line-height: 20px;
 }
 
 #passagem {
+  /* background-color: rgb(243, 241, 241);
+  border: 1px solid rgba(168, 201, 255);
+  border-radius: 5px; */
   display: inline-block;
   margin-left: 10%;
+  padding: 1%;
   text-align: center;
   width: 20%;
-  padding: 1%;
-  background-color: rgb(243, 241, 241);
-  border: 1px solid rgba(168, 201, 255);
-  border-radius: 5px;
+  line-height: 20px;
 }
 
-#principal {
+/* #principal {
   background-color: rgb(243, 241, 241);
   border: 1px solid rgba(168, 201, 255);
   border-radius: 5px;
@@ -74,4 +87,12 @@ body {
   margin-left: 200px;
   display: inline-block;
   padding: 1%;
+} */
+
+.lado-esquerdo {
+
+}
+
+.lado-direito {
+
 }
