--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   border: 0;
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
 
 }
 
@@ -18,7 +19,7 @@ body {
   position: fixed;
   top: 0;
   width: 100vw;
-  height: 8.9vh;
+  height: 10vh;
   padding: 0.2vmax;
   text-align: center;
   color: teal;
@@ -81,6 +82,7 @@ table , tr , td , th {
   border: 0;
   padding: 1.2vmax;
   text-align: left;
+  font-size: 3vmin;
 }
 
 .artigos {
@@ -88,6 +90,7 @@ table , tr , td , th {
   margin: 2vh 0;
   padding: 0.5vmax;
   border: 0 2vh;
+  display: block;
 }
 
 .lado-esquerdo {
@@ -101,20 +104,20 @@ table , tr , td , th {
 }
 
 .prefooter {
-  position: relative;
   display: inline;
   margin-top: 2vh;
   border: 1vh;
 }
 
 .footer {
+  display: block;
   bottom: 0;
   padding-top: 2vh;
   color: rgb(253, 251, 251);
   background-color: rgb(6, 113, 122);
   text-align: center;
   width: 100%;
-  height: 7vh;
+  height: 7vmin;
 }
 
 #rodape a {
