--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     body {
         background-color: rgb(253, 251, 251);
         font-family: Arial, Helvetica, sans-serif;
+        color: rgb(0, 0, 0);
     }
     /**/
     #cabecalho {
