--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ body {
   color: teal;
   background-color: rgba(250, 155, 46, 0.897);
   text-decoration: none;
-  border-bottom: 0.9vh solid rgba(250, 155, 46, 0.897);
 
 }
 
@@ -37,6 +36,10 @@ body {
   text-align: center;
 }
 
+.navibar {
+  position: fixed;
+}
+
 .lista-menu li {
   display: inline;
   float: left;
@@ -44,21 +47,22 @@ body {
   padding: 0.3vmax 0;
   margin: 0;
   height: 4vh;
+  border-bottom: 0.9vh;
 }
 
 .lista-menu a {
-  display: block;
+  display: inline-block;
   padding: 0.8vmax;
   text-decoration: none;
   font-size: 2vh;
   color: teal;
-  border-top: 0.9vh;
+
 }
 
 .lista-menu a:hover {
   background-color: rgba(253, 251, 251);
   color: rgba(250, 155, 46, 0.897);
-  border-top: 0.9vh solid rgba(253, 251, 251);
+  border-bottom: solid rgba(253, 251, 251);
 }
 
 .corpo {
@@ -88,9 +92,10 @@ table , tr , td , th {
 .artigos {
   line-height: 1.1;
   margin: 2vh 0;
-  padding: 0.5vmax;
+  padding: 1vmin;
   border: 0 2vh;
-  display: block;
+  display: inline-block;
+  height: 20vmin 80vmax;
 }
 
 .lado-esquerdo {
@@ -110,17 +115,19 @@ table , tr , td , th {
 }
 
 .footer {
-  display: block;
+  display: inline-block;
   bottom: 0;
-  padding-top: 2vh;
+  top: 85vmin;
+  padding: 2vh;
   color: rgb(253, 251, 251);
   background-color: rgb(6, 113, 122);
   text-align: center;
-  width: 100%;
-  height: 7vmin;
+  width: 100vw;
+  height: 15vmin;
 }
 
 #rodape a {
+  padding: 2vh 0;
   text-decoration: none;
   color: rgb(253, 251, 251);
 }/* stylelint-disable-next-line rule */
