--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@ body {
 h2 {
   color: #495057;
   font-size: 30px;
-
 }
+
 #cabecalho {
   background-color: #eee;
   padding: 5px;
+  position: fixed;
   text-align: center;
   top: 0;
   width: 100%;
-  position: fixed;
 }
 
 #titulo {
@@ -25,13 +25,16 @@ h2 {
 
 #minha_foto {
   border-radius: 10%;
-  width: 110%;
+  width: 100%;
 }
 
 #social-icons {
-  font-size: 25px;
-  margin-bottom: 30px;
+  color: #495057;
+  font-size: 30px;
+  line-height: 3.5rem;
+  margin-bottom: 25px;
   margin-left: 30px;
+  text-align: center;
 }
 
 #licoes_aprendidas {
@@ -55,27 +58,29 @@ h2 {
   color: #495057;
   font-size: 25px;
   line-height: 70px;
-  text-align: center;
   margin-top: 200px;
+  text-align: center;
 }
 
 .lado-esquerdo, .lado-direito {
   display:inline-block;
   margin: 0px 40px;
-  padding: 0px 15px;
   margin-bottom: 50px;
   margin-top: 50px;
   margin-left: 30px;
+  padding: 0px 15px;
 }
 
 figure {
-  width: 300px;
+  background-color: #eee;
+  border-radius: 10%;
   display: inline-block;
-  vertical-align: top;
   margin-top: 0;
   margin-right: 5%;
   margin-left: 30px;
   padding: 0px 1px;
+  vertical-align: top;
+  width: 300px;
 } 
 
 main {
@@ -85,17 +90,24 @@ main {
 article, aside {
   display:inline-block;
   margin: 0px 15px;
-  padding: 0px 15px;
-  width: 66%;
-  margin-right: 12%;
+  margin-right: 1%;
   margin-bottom: 2%;
-  margin-left: 30px;
+  margin-left: 200px;
+  padding: 0px 15px;
+  width: 26.6%;
 } 
 
 table {
   color: #868e96;
   font-size: 25px;
+  line-height: 30px;
   margin-left: 30px;
   text-align:left;
-  line-height: 30px;
+}
+
+nav {
+  background-color: #eee;
+  border-radius: 100%;
+  height: 3.5rem;
+  width: 3.5rem;
 }
