--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
   background-color: rgb(253, 251, 251);
-  border:5px solid rgb(83, 162, 127);
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 h3 {
@@ -16,7 +15,7 @@ h3 {
   top: 0;
   left: 0;
   right: 0;
-  background-color: rgb(83, 162, 127);
+  background-color: rgb(52, 110, 84);
   height: 100px;
   z-index: 2;
 } 
@@ -30,7 +29,7 @@ h3 {
 
 #minha_foto {
 
-  padding: 0 10px 10px 0;
+  padding: 110px 0px 0px 0;
   width: 300px;  
   display: block;
 }
@@ -51,12 +50,20 @@ h3 {
   display: inline-table;
 }
 
+#linksExternos {
+  font-family:cursive;
+  padding-bottom: 30px;
+  padding-top: 50px;
+  padding-left: 10px;
+  font-size: 12px;
+}
+
 #rodape {
   position: absolute;
-  background-color: rgb(83, 162, 127);
+  background-color: rgb(52, 110, 84);
   text-align: center;
   color: antiquewhite;
-  height: 30px;
+  height: 50px;
   left: 0;
   right: 0;
 }
